# admenii

./: LICENSE  README.md  pubspec.yaml
.github/workflows/: release.yml
assets/: schema.sql
installer/: install-admenii.ps1
lib/: main.dart
lib/providers/: ad_blocker_provider.dart
lib/screens/: dashboard.dart  domains_screen.dart  logger_screen.dart  sources_screen.dart  whitelist_screen.dart
native/: ad_blocker.cpp  ad_blocker.h
test/: widget_test.dart
windows/: CMakeLists.txt
windows/native/: CMakeLists.txt  ad_blocker.cpp  ad_blocker.h  database.cpp  database.h  main.cpp
windows/runner/: Runner.rc  main.cpp
